--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "eslint-config-prettier": "^9.0.0",
     "next": "14.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.7",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -22,6 +24,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
+    "prettier": "3.1.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
