--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@headlessui/react": "^1.7.17",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
