--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "eslint-config-prettier": "^9.0.0",
+    "immutable": "^5.0.0-beta.4",
     "next": "14.0.3",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "react": "^18",
