--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "eslint-config-prettier": "^9.0.0",
     "immutable": "^5.0.0-beta.4",
+    "lucide-react": "^0.294.0",
     "next": "14.0.3",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "react": "^18",
