--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -35,7 +35,7 @@ env:
   ECR_REPOSITORY: client           # set this to your Amazon ECR repository name
   ECS_SERVICE: client                 # set this to your Amazon ECS service name
   ECS_CLUSTER: EditEase-Cluster                 # set this to your Amazon ECS cluster name
-  # ECS_TASK_DEFINITION: ./.aws/task-definition.json # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: ./.aws/task-definition.json # set this to the path to your Amazon ECS task definition
                                          # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: client           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
@@ -103,21 +103,21 @@ jobs:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         IMAGE_TAG: ${{ github.sha }}
 
-    # - name: Display Task Definition File
-    #   run: cat ./.aws/task-definition.json
+    - name: Display Task Definition File
+      run: cat ./.aws/task-definition.json
 
-    # - name: Fill in the new image ID in the Amazon ECS task definition
-    #   id: task-def
-    #   uses: aws-actions/amazon-ecs-render-task-definition@v1
-    #   with:
-    #     task-definition: ${{ env.ECS_TASK_DEFINITION }}
-    #     container-name: ${{ env.CONTAINER_NAME }}
-    #     image: ${{ steps.build-image.outputs.image }}
+    - name: Fill in the new image ID in the Amazon ECS task definition
+      id: task-def
+      uses: aws-actions/amazon-ecs-render-task-definition@v1
+      with:
+        task-definition: ${{ env.ECS_TASK_DEFINITION }}
+        container-name: ${{ env.CONTAINER_NAME }}
+        image: ${{ steps.build-image.outputs.image }}
 
-    # - name: Deploy Amazon ECS task definition
-    #   uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-    #   with:
-    #     task-definition: ${{ steps.task-def.outputs.task-definition }}
-    #     service: ${{ env.ECS_SERVICE }}
-    #     cluster: ${{ env.ECS_CLUSTER }}
-    #     wait-for-service-stability: true
+    - name: Deploy Amazon ECS task definition
+      uses: aws-actions/amazon-ecs-deploy-task-definition@v1
+      with:
+        task-definition: ${{ steps.task-def.outputs.task-definition }}
+        service: ${{ env.ECS_SERVICE }}
+        cluster: ${{ env.ECS_CLUSTER }}
+        wait-for-service-stability: true
