--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "prettier-plugin-tailwindcss": "^0.5.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-infinite-scroll-component": "^6.1.0",
     "uuid": "^9.0.1",
     "zukeeper": "^1.0.2",
     "zustand": "^4.4.7"
