--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prettier-plugin-tailwindcss": "^0.5.7",
     "react": "^18",
     "react-dom": "^18",
+    "zukeeper": "^1.0.2",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
