--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@headlessui/react": "^1.7.17",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -30,6 +32,7 @@
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
     "prettier": "3.1.0",
+    "react-hook-form": "^7.49.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
