--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -28,7 +28,7 @@ name: Deploy to Amazon ECS
 
 on:
   push:
-    branches: [ "main", "pipeline" ]
+    branches: [ "main", "pipeline", "client" ]
 
 env:
   AWS_REGION: eu-north-1                      # set this to your preferred AWS region, e.g. us-west-1
