--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.474.0",
     "@aws-sdk/s3-request-presigner": "^3.474.0",
+    "@reduxjs/toolkit": "^2.1.0",
     "@tanstack/react-query": "^5.14.0",
+    "@types/react-redux": "^7.1.33",
     "aws-sdk": "^2.1520.0",
     "axios": "^1.6.2",
     "eslint-config-prettier": "^9.0.0",
@@ -23,9 +25,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-redux": "^9.1.0",
     "sharp": "^0.33.1",
-    "uuid": "^9.0.1",
-    "zustand": "^4.4.7"
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@headlessui/react": "^1.7.17",
